--- a/databricks.yml
+++ b/databricks.yml
@@ -9,21 +9,33 @@ include:
 targets:
   # The 'dev' target, used for development purposes.
   # Whenever a developer deploys using 'dev', they get their own copy.
-  dev:
+  dev-lab:
     # We use 'mode: development' to make sure everything deployed to this target gets a prefix
     # like '[dev my_user_name]'. Setting this mode also disables any schedules and
     # automatic triggers for jobs and enables the 'development' mode for Delta Live Tables pipelines.
     mode: development
     default: true
     workspace:
-      host: https://adb-8195009858693383.3.azuredatabricks.net
+      host: https://adb-8195009858693383.3.azuredatabricks.net # Lab Workspace
+
+  dev-int:
+    # We use 'mode: development' to make sure everything deployed to this target gets a prefix
+    # like '[dev my_user_name]'. Setting this mode also disables any schedules and
+    # automatic triggers for jobs and enables the 'development' mode for Delta Live Tables pipelines.
+    mode: development
+    workspace:
+      host: https://adb-4241309368150769.9.azuredatabricks.net # Int Workspace
 
   # Optionally, there could be a 'staging' target here.
   # (See Databricks docs on CI/CD at https://docs.databricks.com/dev-tools/bundles/index.html.)
   #
-  staging:
+  staging-lab:
     workspace:
-      host: https://adb-8195009858693383.3.azuredatabricks.net
+      host: https://adb-8195009858693383.3.azuredatabricks.net # Lab Workspace
+
+  staging-int:
+    workspace:
+      host: https://adb-4241309368150769.9.azuredatabricks.net # Int Workspace
 
   # The 'prod' target, used for production deployment.
   prod:
@@ -33,7 +45,7 @@ targets:
     # to a path that is not specific to the current user.
     mode: production
     workspace:
-      host: https://adb-4437901305756982.2.azuredatabricks.net
+      host: https://adb-4437901305756982.2.azuredatabricks.net # Factory Workspace
       root_path: /Shared/.bundle/prod/${bundle.name}
     run_as:
       # This runs as bernhard.vennemann@d-one.ai in production. Alternatively,
