--- a/databricks.yml
+++ b/databricks.yml
@@ -1,3 +1,7 @@
+# TODO:
+# - test-lab, test-int, (test-prod) hinzufügen (sollte es ein gemeinsames test geben, oder pro user?)
+# - dynamische git branch referenzierung fixen
+
 # This is a Databricks asset bundle definition for bundle_poc.
 # See https://docs.databricks.com/dev-tools/bundles/index.html for documentation.
 bundle:
@@ -26,12 +30,31 @@ targets:
     workspace:
       host: https://adb-4241309368150769.9.azuredatabricks.net # Int Workspace
 
+  # The 'test' target, used to test functionality prior to merging into the develop branch.
+  # Whenever a developer deploys using 'test', they get their own copy.
+  test-lab:
+    # We use 'mode: development' to make sure everything deployed to this target gets a prefix
+    # like '[test my_user_name]'. Setting this mode also disables any schedules and
+    # automatic triggers for jobs and enables the 'development' mode for Delta Live Tables pipelines.
+    mode: development
+    workspace:
+      host: https://adb-8195009858693383.3.azuredatabricks.net # Lab Workspace
+
+  test-int:
+    # We use 'mode: development' to make sure everything deployed to this target gets a prefix
+    # like '[test my_user_name]'. Setting this mode also disables any schedules and
+    # automatic triggers for jobs and enables the 'development' mode for Delta Live Tables pipelines.
+    mode: development
+    workspace:
+      host: https://adb-4241309368150769.9.azuredatabricks.net # Int Workspace
+
   # The 'staging' targets
   staging-lab:
     # For staging deployments, we only have a single copy, so we override the
     # workspace.root_path default of
     # /Users/${workspace.current_user.userName}/.bundle/${bundle.target}/${bundle.name}
     # to a path that is not specific to the current user.
+    mode: production
     workspace:
       host: https://adb-8195009858693383.3.azuredatabricks.net # Lab Workspace
       root_path: /Shared/.bundle/staging-lab/${bundle.name}
@@ -40,12 +63,15 @@ targets:
     permissions:
       - service_principal_name: 0fd0ef45-7e77-44ea-940e-987e79290a02
         level: CAN_RUN
+    git:
+      branch: develop-lab
 
   staging-int:
     # For staging deployments, we only have a single copy, so we override the
     # workspace.root_path default of
     # /Users/${workspace.current_user.userName}/.bundle/${bundle.target}/${bundle.name}
     # to a path that is not specific to the current user.
+    mode: production
     workspace:
       host: https://adb-4241309368150769.9.azuredatabricks.net # Int Workspace
       root_path: /Shared/.bundle/staging-int/${bundle.name}
@@ -54,6 +80,8 @@ targets:
     permissions:
       - service_principal_name: 593f1531-9a5c-474d-9454-8e0012c573ed
         level: CAN_RUN
+    git:
+      branch: develop-int
 
   # The 'prod' target, used for production deployment.
   prod:
@@ -70,4 +98,6 @@ targets:
     permissions:
       - service_principal_name: 67bf85a0-dd67-48f1-af04-bee8d047edfa
         level: CAN_RUN
+    git:
+      branch: main
     
